--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -4,6 +4,10 @@ RUN apt-get update && apt-get install -y curl wget build-essential libelf-dev aw
 COPY . /usr/src/app
 WORKDIR /usr/src/app
 
+RUN chmod a+x ./build.sh
+RUN chmod a+x ./run.sh
+RUN chmod a+x ./workarounds.sh
+
 ENV VERSION '2.77.0+rev1'
 RUN BALENA_MACHINE_NAME=%%BALENA_MACHINE_NAME%% ./build.sh build --device %%BALENA_MACHINE_NAME%% --os-version "$VERSION" --src rtl8812au
 
